--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,8 @@
     "express": "^4.18.2",
     "mongoose": "^7.0.2",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^2.0.21"
+    "nodemon": "^2.0.21",
+    "path": "^0.12.7"
   },
   "name": "api",
   "version": "1.0.0",
